<resources>
    <string name="app_name">My Applicationo</string>
    <string name="me">我</string>
    <string name="login">请登录</string>
    <string name="bankcard">银行卡</string>
    <string name="set">安全设置</string>
    <string name="coupons">优惠券</string>
    <string name="invite">邀请好友</string>
    <string name="integral">积分商城</string>
    <string name="shake">摇一摇</string>
    <string name="about">关于钱生活</string>
    <string name="home">首页</string>
    <string name="product">产品</string>
    <string name="assets">资产</string>
</resources>
