<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zoredp"
        android:orientation="vertical"
        android:layout_weight="1.4"
        android:background="@color/blue"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/bottomdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/me"
                android:gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bankcard"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="2"
            android:src="@drawable/bankcard"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1"
            android:text="@string/login"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zoredp"
        android:orientation="vertical"
        android:layout_weight="5"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/picturedp"
                android:layout_height="match_parent"
                android:src="@drawable/bankcard"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/bankcard"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewdp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/picturedp"
                android:layout_height="match_parent"
                android:src="@drawable/bankcard"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/set"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewdph"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/picturedp"
                android:layout_height="match_parent"
                android:src="@drawable/coupons"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/coupons"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewdp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/picturedp"
                android:layout_height="match_parent"
                android:src="@drawable/invite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/invite"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewdp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/picturedp"
                android:layout_height="match_parent"
                android:src="@drawable/integral"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/integral"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewdp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/picturedp"
                android:layout_height="match_parent"
                android:src="@drawable/shake"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/shake"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewdph"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="@dimen/picturedp"
                android:layout_height="match_parent"
                android:src="@drawable/about"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/about"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewdp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zoredp"
            android:layout_weight="1.6"
            android:layout_margin="@dimen/margin"
            android:background="@color/gray"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zoredp"
                android:layout_weight="2">
                <ImageView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/bankcard"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/bankcard"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/bankcard"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/bankcard"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zoredp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/home"
                    />
                <TextView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/product"/>
                <TextView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/assets"/>
                <TextView
                    android:layout_width="@dimen/zoredp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:text="@string/me"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>